better build for nzbhydra

--- a/windowsservercore/nzbhydra/Dockerfile
+++ b/windowsservercore/nzbhydra/Dockerfile
@@ -1,4 +1,4 @@
-FROM windowsservercore:latest
+FROM chocolate:windowsserver
 MAINTAINER Moreno Sint Hill (Mirabis) <info@mirabis.nl>
 LABEL Creator=Mirabis \
       docker.mirabis.is-beta=True \
@@ -7,15 +7,10 @@ LABEL Creator=Mirabis \
 
 ENV PYTHON_VER=2.7.x NZBHYDRA_BASE_VER=0.0.1a90
 
-# Install Chocolatey Package Manager
-# Install dependencies
-RUN powershell.exe -Command \
-    iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); \
-	choco install python2 -y 
-#RUN SETX /M Path %path%;C:\mysql-5.6.29-winx64\bin
 # Install Windows Version of NzbHydra
 # pip install lxml; \
-RUN powershell -Command \
+RUN powershell.exe -Command \
+	Install-Package -Name python2 -Force ; \
 	$ErrorActionPreference = 'Stop'; \
 	Invoke-WebRequest -Method Get -Uri https://github.com/theotherp/nzbhydra/archive/$NZBHYDRA_BASE_VER.zip -OutFile c:\nzbhydra.zip ; \
 	Expand-Archive -Path c:\nzbhydra.zip -DestinationPath c:\ ; \
